# ssr-playground

./: Cargo.toml  README.md  flake.nix
assets/: behaviors._hs
src/: main.rs
templates/: home.html  list.html
